#350 findbugs fixes