@@ -26,51 +26,51 @@ public class Portfolio1Validator {
 
         Subject mathematics = (Subject) portfolio.getTaxons().get(0);
         assertEquals("Mathematics", mathematics.getName());
-        assertEquals(new Long(21), mathematics.getId());
+        assertEquals(Long.valueOf(21), mathematics.getId());
         assertEquals(2, mathematics.getDomain().getSubjects().size());
         assertEquals(2, mathematics.getDomain().getEducationalContext().getDomains().size());
 
-        assertEquals(new Long(6), portfolio.getCreator().getId());
+        assertEquals(Long.valueOf(6), portfolio.getCreator().getId());
         assertEquals("mati.maasikas-vaarikas", portfolio.getCreator().getUsername());
-        assertEquals(new Long(5), portfolio.getOriginalCreator().getId());
+        assertEquals(Long.valueOf(5), portfolio.getOriginalCreator().getId());
         assertEquals("The changes after 2008.", portfolio.getSummary());
-        assertEquals(new Long(95455215), portfolio.getViews());
+        assertEquals(Long.valueOf(95455215), portfolio.getViews());
         assertEquals(5, portfolio.getTags().size());
 
         List<Chapter> chapters = portfolio.getChapters();
         assertEquals(3, chapters.size());
         Chapter chapter = chapters.get(0);
-        assertEquals(new Long(1), chapter.getId());
+        assertEquals(Long.valueOf(1), chapter.getId());
         assertEquals("The crisis", chapter.getTitle());
         assertNull(chapter.getText());
         List<LearningObject> materials = chapter.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(1), materials.get(0).getId());
+        assertEquals(Long.valueOf(1), materials.get(0).getId());
         assertEquals(2, chapter.getSubchapters().size());
         Chapter subchapter1 = chapter.getSubchapters().get(0);
-        assertEquals(new Long(4), subchapter1.getId());
+        assertEquals(Long.valueOf(4), subchapter1.getId());
         assertEquals("Subprime", subchapter1.getTitle());
         assertNull(subchapter1.getText());
         materials = subchapter1.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(8), materials.get(0).getId());
+        assertEquals(Long.valueOf(8), materials.get(0).getId());
         Chapter subchapter2 = chapter.getSubchapters().get(1);
-        assertEquals(new Long(5), subchapter2.getId());
+        assertEquals(Long.valueOf(5), subchapter2.getId());
         assertEquals("The big crash", subchapter2.getTitle());
         assertEquals("Bla bla bla\nBla bla bla bla bla bla bla", subchapter2.getText());
         materials = subchapter2.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(3), materials.get(0).getId());
+        assertEquals(Long.valueOf(3), materials.get(0).getId());
 
         chapter = chapters.get(1);
-        assertEquals(new Long(3), chapter.getId());
+        assertEquals(Long.valueOf(3), chapter.getId());
         assertEquals("Chapter 2", chapter.getTitle());
         assertEquals("Paragraph 1\n\nParagraph 2\n\nParagraph 3\n\nParagraph 4", chapter.getText());
         assertEquals(1, chapter.getContentRows().get(0).getLearningObjects().size());
         assertEquals(0, chapter.getSubchapters().size());
 
         chapter = chapters.get(2);
-        assertEquals(new Long(2), chapter.getId());
+        assertEquals(Long.valueOf(2), chapter.getId());
         assertEquals("Chapter 3", chapter.getTitle());
         assertEquals("This is some text that explains what is the Chapter 3 about.\nIt can have many lines\n\n\n"
                 + "And can also have    spaces   betwenn    the words on it", chapter.getText());
@@ -94,48 +94,48 @@ public class Portfolio1Validator {
         assertEquals(new DateTime("2004-12-29T08:00:01.000+02:00"), portfolio.getUpdated());
 
         assertEquals("Mathematics", mathematics.getName());
-        assertEquals(new Long(21), mathematics.getId());
+        assertEquals(Long.valueOf(21), mathematics.getId());
         assertEquals(2, mathematics.getDomain().getSubjects().size());
         assertEquals(2, mathematics.getDomain().getEducationalContext().getDomains().size());
 
-        assertEquals(new Long(6), portfolio.getCreator().getId());
+        assertEquals(Long.valueOf(6), portfolio.getCreator().getId());
         assertEquals("mati.maasikas-vaarikas", portfolio.getCreator().getUsername());
-        assertEquals(new Long(5), portfolio.getOriginalCreator().getId());
+        assertEquals(Long.valueOf(5), portfolio.getOriginalCreator().getId());
         assertEquals("The changes after 2008.", portfolio.getSummary());
-        assertEquals(new Long(95455215), portfolio.getViews());
+        assertEquals(Long.valueOf(95455215), portfolio.getViews());
         assertEquals(5, portfolio.getTags().size());
 
         chapter = chapters.get(0);
         assertEquals(3, chapters.size());
-        assertEquals(new Long(1), chapter.getId());
+        assertEquals(Long.valueOf(1), chapter.getId());
         assertEquals("The crisis", chapter.getTitle());
         assertNull(chapter.getText());
         materials = chapter.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(1), materials.get(0).getId());
+        assertEquals(Long.valueOf(1), materials.get(0).getId());
         assertEquals(2, chapter.getSubchapters().size());
-        assertEquals(new Long(4), subchapter1.getId());
+        assertEquals(Long.valueOf(4), subchapter1.getId());
         assertEquals("Subprime", subchapter1.getTitle());
         assertNull(subchapter1.getText());
         materials = subchapter1.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(8), materials.get(0).getId());
-        assertEquals(new Long(5), subchapter2.getId());
+        assertEquals(Long.valueOf(8), materials.get(0).getId());
+        assertEquals(Long.valueOf(5), subchapter2.getId());
         assertEquals("The big crash", subchapter2.getTitle());
         assertEquals("Bla bla bla\nBla bla bla bla bla bla bla", subchapter2.getText());
         materials = subchapter2.getContentRows().get(0).getLearningObjects();
         assertEquals(1, materials.size());
-        assertEquals(new Long(3), materials.get(0).getId());
+        assertEquals(Long.valueOf(3), materials.get(0).getId());
 
         chapter = chapters.get(1);
-        assertEquals(new Long(3), chapter.getId());
+        assertEquals(Long.valueOf(3), chapter.getId());
         assertEquals("Chapter 2", chapter.getTitle());
         assertEquals("Paragraph 1\n\nParagraph 2\n\nParagraph 3\n\nParagraph 4", chapter.getText());
         assertEquals(1, chapter.getContentRows().get(0).getLearningObjects().size());
         assertEquals(0, chapter.getSubchapters().size());
 
         chapter = chapters.get(2);
-        assertEquals(new Long(2), chapter.getId());
+        assertEquals(Long.valueOf(2), chapter.getId());
         assertEquals("Chapter 3", chapter.getTitle());
         assertEquals("This is some text that explains what is the Chapter 3 about.\nIt can have many lines\n\n\n"
                 + "And can also have    spaces   betwenn    the words on it", chapter.getText());
